TestClienteRepository
Arreglando errores en los test