@@ -20,26 +20,25 @@ import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class ClienteRepositoryImplTest {
 
+public class ClienteRepositoryImplTest {
     private static ClienteRepositoryImpl clienteRepository;
-    private UserRemoteRepository usuarioRepository;
-    private TarjetaRemoteRepositoryImpl tarjetaRepository;
+    private static LocalDataBaseManager dataBaseManager;
 
     @BeforeAll
     static void setUpAll() throws SQLException {
         ConfigProperties properties = new ConfigProperties("application.properties");
-        LocalDataBaseManager dataBaseManager = LocalDataBaseManager.getInstance(properties);
+        dataBaseManager = LocalDataBaseManager.getInstance(properties);
         dataBaseManager.connect();
         clienteRepository = new ClienteRepositoryImpl(dataBaseManager);
     }
 
     @BeforeEach
     void setUp() {
+        clienteRepository.deleteAll();
         var usuario = new Usuario(1L, "Test", "TestUsername", "test@example.com", LocalDateTime.now(), LocalDateTime.now());
-        List<Tarjeta> tarjetas = new ArrayList<Tarjeta>();
-        var tarjeta = new Tarjeta(1L, "Test", "1234567890123456", LocalDate.of(2025, 12, 31), LocalDateTime.now(), LocalDateTime.now());
-        tarjetas.add(tarjeta);
+        var tarjeta = new Tarjeta(1L, "1234567890123456", "Test", LocalDate.of(2025, 12, 31), LocalDateTime.now(), LocalDateTime.now());
+        List<Tarjeta> tarjetas = Arrays.asList(tarjeta);
         var cliente = new Cliente(1L, usuario, tarjetas, LocalDateTime.now(), LocalDateTime.now());
         clienteRepository.create(cliente);
     }
@@ -50,165 +49,142 @@ class ClienteRepositoryImplTest {
     }
 
     @Test
-    public void GetAll() {
+    public void testGetAll() {
         List<Cliente> clientes = clienteRepository.getAll();
         assertNotNull(clientes);
         assertEquals(1, clientes.size());
-
-        Cliente cliente = clientes.getFirst();
-        assertEquals("Pedro pedro", cliente.getUsuario().getNombre());
+        Cliente cliente = clientes.get(0);
+        assertEquals("Test", cliente.getUsuario().getNombre());
         assertNotNull(cliente.getTarjeta());
         assertEquals(1, cliente.getTarjeta().size());
-
-        Tarjeta tarjeta = cliente.getTarjeta().getFirst();
+        Tarjeta tarjeta = cliente.getTarjeta().get(0);
         assertEquals("1234567890123456", tarjeta.getNumeroTarjeta());
     }
 
     @Test
-    public void GetById() {
-        Optional<Cliente> clienteOpt = clienteRepository.getById(1);
+    public void testGetById() {
+        Optional<Cliente> clienteOpt = clienteRepository.getById(1L);
         assertTrue(clienteOpt.isPresent());
-
         Cliente cliente = clienteOpt.get();
         assertEquals(1L, cliente.getUsuario().getId());
-        assertEquals("Pedro", cliente.getUsuario().getNombre());
+        assertEquals("Test", cliente.getUsuario().getNombre());
         assertNotNull(cliente.getTarjeta());
         assertFalse(cliente.getTarjeta().isEmpty());
-
-        Tarjeta tarjeta = cliente.getTarjeta().getFirst();
+        Tarjeta tarjeta = cliente.getTarjeta().get(0);
         assertEquals("1234567890123456", tarjeta.getNumeroTarjeta());
     }
 
     @Test
-    public void Create() {
+    public void testCreate() {
         Usuario usuario = Usuario.builder()
-                .id(1L)
+                .id(2L)
                 .nombre("Pedro")
                 .userName("pedro")
                 .email("pedro@ejemplo.com")
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         Tarjeta tarjeta1 = Tarjeta.builder()
-                .id(1L)
+                .id(2L)
                 .numeroTarjeta("9876543210987654")
                 .nombreTitular("Pedro")
                 .fechaCaducidad(LocalDate.of(2025, 12, 31))
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         Tarjeta tarjeta2 = Tarjeta.builder()
-                .id(2L)
+                .id(3L)
                 .numeroTarjeta("1234567890123456")
                 .nombreTitular("Pedro")
                 .fechaCaducidad(LocalDate.of(2026, 12, 31))
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         List<Tarjeta> tarjetas = Arrays.asList(tarjeta1, tarjeta2);
-
         Cliente cliente = Cliente.builder()
+                .id(2L)
                 .usuario(usuario)
                 .tarjeta(tarjetas)
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
-
         Cliente createdCliente = clienteRepository.create(cliente);
-
         assertNotNull(createdCliente);
         assertNotNull(createdCliente.getUsuario().getId());
         assertEquals("Pedro", createdCliente.getUsuario().getNombre());
         assertNotNull(createdCliente.getTarjeta());
         assertEquals(2, createdCliente.getTarjeta().size());
-
         Optional<Cliente> retrievedCliente = clienteRepository.getById(createdCliente.getId());
         assertTrue(retrievedCliente.isPresent());
         assertEquals(createdCliente.getId(), retrievedCliente.get().getId());
         assertEquals("Pedro", retrievedCliente.get().getUsuario().getNombre());
         assertNotNull(retrievedCliente.get().getTarjeta());
         assertEquals(2, retrievedCliente.get().getTarjeta().size());
-
         Tarjeta retrievedTarjeta1 = retrievedCliente.get().getTarjeta().get(0);
         Tarjeta retrievedTarjeta2 = retrievedCliente.get().getTarjeta().get(1);
-
         assertEquals("9876543210987654", retrievedTarjeta1.getNumeroTarjeta());
         assertEquals("1234567890123456", retrievedTarjeta2.getNumeroTarjeta());
     }
 
-
-
     @Test
-    public void Update() {
+    public void testUpdate() {
 
-        Optional<Cliente> clienteOriginal = clienteRepository.getById(13145346L);
+        Optional<Cliente> clienteOriginal = clienteRepository.getById(1L);
         assertTrue(clienteOriginal.isPresent());
-
         Usuario updatedUsuario = Usuario.builder()
-                .id(13145346L)
+                .id(1L)
                 .nombre("Pedro")
                 .userName("pedro")
                 .email("pedro@ejemplo.com")
                 .createdAt(clienteOriginal.get().getUsuario().getCreatedAt())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         Tarjeta updatedTarjeta1 = Tarjeta.builder()
-                .id(1234L)
+                .id(1L)
                 .numeroTarjeta("6543210987654321")
                 .nombreTitular("Pedro")
                 .fechaCaducidad(LocalDate.of(2026, 12, 31))
-                .createdAt(clienteOriginal.get().getTarjeta().getFirst().getCreatedAt())
+                .createdAt(clienteOriginal.get().getTarjeta().get(0).getCreatedAt())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         Tarjeta updatedTarjeta2 = Tarjeta.builder()
-                .id(5678L)
+                .id(2L)
                 .numeroTarjeta("1234567890123456")
                 .nombreTitular("Pedro")
                 .fechaCaducidad(LocalDate.of(2027, 12, 31))
-                .createdAt(clienteOriginal.get().getTarjeta().getFirst().getCreatedAt())
+                .createdAt(clienteOriginal.get().getTarjeta().get(0).getCreatedAt())
                 .updatedAt(LocalDateTime.now())
                 .build();
-
         List<Tarjeta> updatedTarjetas = Arrays.asList(updatedTarjeta1, updatedTarjeta2);
-
         Cliente updatedCliente = Cliente.builder()
+                .id(1L)
                 .usuario(updatedUsuario)
                 .tarjeta(updatedTarjetas)
+                .createdAt(clienteOriginal.get().getCreatedAt())
+                .updatedAt(LocalDateTime.now())
                 .build();
-
-        Cliente clienteResult = clienteRepository.update(13145346L, updatedCliente);
+        Cliente clienteResult = clienteRepository.update(1L, updatedCliente);
         assertNotNull(clienteResult);
         assertEquals("Pedro", clienteResult.getUsuario().getNombre());
-
-        Optional<Cliente> retrievedCliente = clienteRepository.getById(13145346L);
+        Optional<Cliente> retrievedCliente = clienteRepository.getById(1L);
         assertTrue(retrievedCliente.isPresent());
         assertEquals("Pedro", retrievedCliente.get().getUsuario().getNombre());
-
         assertNotNull(retrievedCliente.get().getTarjeta());
         assertEquals(2, retrievedCliente.get().getTarjeta().size());
-
         Tarjeta retrievedTarjeta1 = retrievedCliente.get().getTarjeta().get(0);
         Tarjeta retrievedTarjeta2 = retrievedCliente.get().getTarjeta().get(1);
-
         assertEquals("6543210987654321", retrievedTarjeta1.getNumeroTarjeta());
         assertEquals("1234567890123456", retrievedTarjeta2.getNumeroTarjeta());
     }
 
     @Test
-    public void Delete() {
+    public void testDelete() {
 
-        Optional<Cliente> clienteOpt = clienteRepository.getById(999999999999L);
+        Optional<Cliente> clienteOpt = clienteRepository.getById(1L);
         assertTrue(clienteOpt.isPresent());
-
-
-        boolean deleted = clienteRepository.delete(999999999999L);
+        boolean deleted = clienteRepository.delete(1L);
         assertTrue(deleted);
-
-
-        Optional<Cliente> deletedCliente = clienteRepository.getById(999999999999L);
+        Optional<Cliente> deletedCliente = clienteRepository.getById(1L);
         assertFalse(deletedCliente.isPresent());
     }
 
@@ -216,10 +192,8 @@ class ClienteRepositoryImplTest {
     public void testDeleteAll() {
         List<Cliente> clientesAntes = clienteRepository.getAll();
         assertFalse(clientesAntes.isEmpty());
-
         boolean deletedAll = clienteRepository.deleteAll();
         assertTrue(deletedAll);
-
         List<Cliente> clientesDespues = clienteRepository.getAll();
         assertTrue(clientesDespues.isEmpty());
     }
